# InfiniTux

./: CMakeLists.txt
src/: main.cpp
src/game/: game_object.hpp  game_object_manager.cpp  game_object_manager.hpp  moving_object.hpp  player.cpp  player.hpp  sprited_object.cpp  sprited_object.hpp
src/game/collision/: collision_hit.hpp  collision_object.cpp  collision_object.hpp  collision_system.cpp  collision_system.hpp
src/main/: constants.cpp  constants.hpp  resources.cpp  resources.hpp  screen.hpp  screen_manager.cpp  screen_manager.hpp
src/math/: rectf.cpp  rectf.hpp  sizef.cpp  sizef.hpp  vector.cpp  vector.hpp
src/screens/: game_session.cpp  game_session.hpp  test_screen.cpp  test_screen.hpp
src/util/: current_object.hpp
src/video/: color.cpp  color.hpp  layer.hpp  render_request.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  video_system.cpp  video_system.hpp
src/video/sdl/: sdl_error.cpp  sdl_error.hpp  sdl_renderer.cpp  sdl_renderer.hpp  sdl_texture_manager.cpp  sdl_texture_manager.hpp  sdl_video_system.cpp  sdl_video_system.hpp
